# solana-coin-flip

./: Anchor.toml  package-lock.json  package.json  request.ts
programs/solana-coin-flip/: Cargo.toml
programs/solana-coin-flip/src/: error.rs  lib.rs
programs/solana-coin-flip/src/instructions/: consume_randomness.rs  create_user_account.rs  house_init.rs  house_set_function.rs  mod.rs  request_randomness.rs  user_guess.rs  user_init.rs  user_settle.rs
programs/solana-coin-flip/src/state/: house_state.rs  mod.rs  user_account.rs  user_state.rs
programs/solana-coin-flip/src/switchboard-function/src/: main.rs  params.rs
tests/: custom_randomness_request.ts  solana-coin-flip.ts  solana-randomness-consumer.ts  utils.ts
