[package]
name = "solana-coin-flip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_coin_flip"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "=1.17.27"
anchor-spl = "0.29.0"
switchboard-solana = "0.29.99"
bytemuck = "1.15.0"
